# CLRS

./: CMakeLists.txt  README.md
ch02/: ch02.md
ch02/include/ch02/: binary_add.h  insertion_sort.h  linear_search.h  merge_sort.h  selection_sort.h
ch02/test/: binary_add_test.cpp  insertion_sort_test.cpp  linear_search_test.cpp  merge_sort_test.cpp  selection_sort_test.cpp
ch2/include/ch2/: insertion_sort.h
ch2/src/: insertion_sort.cpp
ch2/test/: insertion_sort_test.cpp
